# peepsweep

./: .env  .gitignore  Cargo.toml  FINALISED.md  IMPLEMENTATION_DB.md  IMPLEMENTATION_PLAN.md  MODULAR-ARCHITECTURE-COMPLETE.md  MODULAR-POSITION-FETCHER.md  README.md  REFACTORING-ROADMAP.md  TRADE_STREAMING_VERIFICATION.md  advancedfeatures.md  aerodrome_research.md  apeswap_research.md  apeswap_test_isolated.rs  article.md  backendplan.md  bridge.md  bulletprooftokendiscoverysystem.md  crosschain.md  docker-compose.yml  essentialanal.md  finalproductspecs.md  fixflashbots.md  gas-slippage.md  pancakeswapv2dexresearch.md  plan.md  plan2.md  project-status.md  protocol-architecture.md  risk-mgmt.md  spiritswapdexresearch.md  standalone_sushiswap_test.rs  standalone_test.rs  standalone_uniswap_test.rs  sushiswap_research.md  test_analytics_endpoints.py  test_api_integration.py  test_balancer_isolated.rs  test_live_streaming.py  (+9 more)
backend/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  bridge_config.json  build.rs  docker-compose.test.yml  load_test.py  performance_analysis.md  performance_analysis_corrected.md  prove_slippage.sh  response.json  setup-flashbots.md  test_balancer_real.rs  test_bridge_comprehensive.sh  test_bridge_live.sh  test_bridge_system.sh  test_bridges_standalone.rs  test_dex_individual.rs  test_http_response.rs  test_mempool_standalone.rs  test_routing_only.rs  test_slippage.rs  test_slippage_demo.long-type-7598006470920711731.txt  test_tier1_aggregation.rs  test_time_delays.sh  test_time_delays_focused.sh  test_uniswap_individual.rs
backend/.sqlx/: query-metadata.json
backend/configs/protocols/: sushiswap.yaml  uniswap_v2.yaml  uniswap_v3.yaml
backend/migrations/: 001_initial_schema.sql  002_additional_tables.sql
backend/sql/: init.sql  token_database_schema.sql
backend/src/: aggregator.rs  cache.rs  gas.rs  lib.rs  main.rs  main_old.rs  performance.rs  price_impact.rs  slippage.rs  token_db.rs  types.rs
backend/src/analytics/: advanced_cache_manager.rs  advanced_monitoring_engine.rs  api_tests.rs  benchmark_integration.rs  cache_manager.rs  competitive_benchmark_engine.rs  data_aggregation_engine.rs  data_compression_engine.rs  data_models.rs  data_pipeline.rs  enhanced_pnl_integration.rs  gas_optimization_analyzer.rs  gas_reports_generator.rs  gas_usage_tracker.rs  job_scheduler.rs  live_pnl_engine.rs  load_test.rs  mod.rs  multi_currency_pnl.rs  performance_api.rs  performance_benchmark.rs  performance_comparison.rs  performance_metrics.rs  performance_tests.rs  pnl_aggregation.rs  pnl_api.rs  pnl_calculator.rs  pnl_compression.rs  pnl_integration.rs  pnl_persistence.rs  pnl_websocket.rs  simple_cache.rs  simple_scheduler.rs  simple_trade_api.rs  timescaledb_persistence.rs  trade_history.rs  trade_history_api.rs  trade_streaming.rs
backend/src/api/: admin.rs  calculations.rs  gas_analytics.rs  insights_api.rs  middleware_handlers.rs  mod.rs  performance_analytics.rs  performance_analytics_api.rs  performance_websocket.rs  pnl_api.rs  positions.rs  rate_limit_api.rs  rate_limit_middleware.rs  rate_limit_test.rs  rate_limiter.rs  test.rs  token_discovery_api.rs  tokens.rs  tokens_api.rs  trade_history_api.rs  usage_tracker.rs
backend/src/bridges/: across_protocol.rs  celer_cbridge.rs  config.rs  hop_protocol.rs  load_testing.rs  mod.rs  monitoring.rs  multi_hop.rs  multichain.rs  openapi.rs  stargate_finance.rs  synapse_protocol.rs
backend/src/cache/: mod.rs  strategies.rs
backend/src/calculations/: fees.rs  impermanent_loss.rs  mod.rs  pricing.rs
backend/src/config/: mod.rs
backend/src/crosschain/: arbitrage_api.rs  arbitrage_detector.rs  atomic_swaps.rs  chain_abstraction_api.rs  chain_abstractor.rs  integration_test.rs  mod.rs  portfolio_api.rs  portfolio_manager.rs  portfolio_websocket.rs  unified_token_interface.rs
backend/src/database/: background_jobs.rs  cache.rs  migrations.rs  mod.rs  models.rs  queries.rs  repository.rs
backend/src/dexes/: aerodrome.rs  apeswap.rs  balancer.rs  bancor.rs  beethovenx.rs  biswap.rs  camelot.rs  cowswap.rs  curve.rs  dodo.rs  fraxswap.rs  kyberswap.rs  manager.rs  maverick.rs  mod.rs  pancakeswap.rs  pancakeswap_v2.rs  pangolin.rs  quickswap.rs  spiritswap.rs  spiritswap_v2.rs  spookyswap.rs  sushiswap.rs  traderjoe.rs  uniswap_v2.rs  uniswap_v3.rs  velodrome.rs
backend/src/execution/: advanced_execution_api.rs  mod.rs  order_splitter.rs  slippage_predictor.rs  slippage_protection.rs
backend/src/fetchers/: config_parser.rs  generic_fetcher.rs  mod.rs  orchestrator.rs
backend/src/indexer/: backfill.rs  events.rs  mod.rs  processor.rs  stream.rs
backend/src/mev_protection/: flashbots.rs  mempool.rs  mod.rs  sandwich_detector.rs  slippage_manager.rs  time_delays.rs
backend/src/risk_management/: alert_system.rs  config.rs  database.rs  event_ingestion.rs  integrated_service.rs  mod.rs  performance_tracker.rs  position_tracker.rs  redis_cache.rs  redis_cache_backup.rs  risk_engine.rs  types.rs  websocket_server.rs
backend/src/routing/: advanced_router.rs  complex_routes.rs  direct_routes.rs  liquidity_tracker.rs  mod.rs  multi_hop.rs  preference_router.rs  preferences_api.rs  route_generator.rs  strategy_templates.rs  test.rs  user_preferences.rs
backend/src/token_registry/: discovery_engine.rs  integration_service.rs  (+4 more)
backend/tests/: alert_management_integration_test.rs  alert_real_data_test.rs  arbitrage_alerts_integration_test.rs  chain_abstractor_test.rs  crosschain_test.rs  focused_arbitrage_test.rs  integration_test.rs  integration_test_infrastructure.rs  live_integration_test.rs  metrics_aggregation_real_data_test.rs  order_splitter_test.rs  performance_benchmark.rs  performance_calculator_test.rs  pnl_calculation_test.rs  portfolio_performance_mock_test.rs  portfolio_performance_test.rs  portfolio_test.rs  position_updates_test.rs  risk_threshold_alerts_test.rs  simple_arbitrage_test.rs  slippage_predictor_test.rs  slippage_protection_test.rs  trade_event_streaming_test.rs  websocket_server_test.rs  websocket_simple_test.rs
(+107 files in other folders)
