[package]
name = "standalone_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "standalone_test"
path = "standalone_test.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
