[package]
name = "standalone_uniswap_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "standalone_uniswap_test"
path = "standalone_uniswap_test.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
