[package]
name = "peepsweep-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "compression-gzip", "timeout"] }

# Ethereum client - alloy-rs
alloy = { version = "0.6", features = ["full"] }
alloy-provider = "0.6"
alloy-rpc-client = "0.6"
alloy-transport-http = "0.6"
alloy-contract = "0.6"
alloy-sol-types = "0.6"
alloy-primitives = "0.6"

# Async utilities
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "rust_decimal"] }

# Cache
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"

# Math
rust_decimal = { version = "1.32", features = ["serde", "db-postgres"] }
rust_decimal_macros = "1.32"
bigdecimal = { version = "0.3", features = ["serde"] }
libm = "0.2"

# Configuration parsing
serde_yaml = "0.9"

# HTTP client for RPC calls
reqwest = { version = "0.11", features = ["json"] }
