[package]
name = "bralaladex-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "bralaladex_backend"
path = "src/lib.rs"

[[bin]]
name = "bralaladex-backend"
path = "src/main.rs"


[[bin]]
name = "test_routing_only"
path = "test_routing_only.rs"

[[bin]]
name = "test_rate_limiting"
path = "src/api/rate_limit_test.rs"

[[bin]]
name = "test_http_response"
path = "test_http_response.rs"


[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
alloy = { version = "0.1", features = ["full"] }
alloy-primitives = "0.7"
alloy-provider = "0.1"
alloy-rpc-client = "0.1"
alloy-transport-http = "0.1"
alloy-rpc-types = "0.1"
keccak-hash = "0.10"
md5 = "0.7"
rlp = "0.5"
ethereum-types = "0.14"
secp256k1 = { version = "0.27", features = ["global-context", "rand-std"] }
keccak = "0.1"
sha3 = "0.10"
futures = "0.3"
tiny-keccak = { version = "2.0", features = ["keccak"] }
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
async-trait = "0.1"
once_cell = "1.19"
# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
log = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
# High-performance optimizations
dashmap = "6.0"  # Lock-free concurrent HashMap
atomic_float = "1.0"  # Lock-free atomic operations
simd-json = "0.13"  # SIMD-accelerated JSON parsing
bytes = "1.0"  # Zero-copy byte operations
uuid = { version = "1.0", features = ["v4", "serde"] }  # UUID with serde support
rust_decimal = { version = "1.32", features = ["serde-with-str"] }  # High-precision decimal arithmetic
rust_decimal_macros = "1.32"  # Decimal macros for constants
num-traits = "0.2"  # Numeric traits for decimal operations
smallvec = "1.0"  # Stack-allocated vectors
fxhash = "0.2"  # Fast non-cryptographic hashing
rayon = "1.0"  # Data parallelism
crossbeam = "0.8"  # Lock-free data structures
rand = "0.8"  # Random number generation for routing simulations
tokio-tungstenite = "0.21"  # WebSocket server implementation
futures-util = "0.3"  # Stream utilities for WebSocket handling
cron = "0.12"  # Cron expression parsing for scheduler

# P&L and Analytics dependencies
zstd = "0.13"  # ZSTD compression for P&L data
lz4_flex = "0.11"  # LZ4 compression algorithm
flate2 = "1.0"  # GZIP compression
snap = "1.1"  # Snappy compression

[dev-dependencies]
axum-test = "15.0"
tempfile = "3.0"  # Temporary file creation for tests
tokio-tungstenite = "0.21"  # WebSocket client for testing
futures-util = "0.3"  # Stream utilities for WebSocket testing
