[package]
name = "bralaladex-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "bralaladex_backend"
path = "src/lib.rs"

[[bin]]
name = "bralaladex-backend"
path = "src/main.rs"




[dependencies]
# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"

# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for DEX APIs
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Crypto utilities (for DEX integrations)
sha2 = "0.10"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Ethereum utilities (for DEX contracts)
alloy = { version = "0.1", features = ["full"] }
alloy-primitives = "0.7"
alloy-provider = "0.1"
alloy-rpc-client = "0.1"
alloy-transport-http = "0.1"
alloy-rpc-types = "0.1"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Performance optimizations
dashmap = "6.0"  # Lock-free concurrent HashMap
rust_decimal = { version = "1.32", features = ["serde-with-str"] }  # High-precision decimal arithmetic
num-traits = "0.2"  # Numeric traits for decimal operations

# Additional dependencies
tracing = "0.1"  # Logging for DEX integrations
uuid = { version = "1.0", features = ["v4", "serde"] }  # UUID support
once_cell = "1.19"  # Lazy static initialization
redis = { version = "0.23", features = ["aio", "tokio-comp"] }  # Redis client

[dev-dependencies]
axum-test = "15.0"
tempfile = "3.0"  # Temporary file creation for tests
tokio-tungstenite = "0.21"  # WebSocket client for testing
futures-util = "0.3"  # Stream utilities for WebSocket testing
